// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField should render component with custom inputEl 1`] = `
<div
  className="form-field"
>
  <Component
    width={11}
  >
    Test
  </Component>
  <span>
    Input
  </span>
  <button>
    Ok
  </button>
</div>
`;

exports[`FormField should render component with default inputEl 1`] = `
<div
  className="form-field"
>
  <Component
    width={11}
  >
    Test
  </Component>
  <input
    className="gf-form-input width-12"
    onChange={[MockFunction]}
    type="text"
    value={10}
  />
</div>
`;
